css/portfolio.css
.cell {
    /* background-color: lightcoral; */
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    overflow: hidden;
    margin-bottom: 1rem;
}

.thumbnail {
    display: flex;
    justify-content: center;
    align-items: center;
}

.projectImg {
    position: relative;
    z-index: -1;
    /* top: 0; */
}

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    background-color: rgba(0,0,0,0.2);
    z-index: 3;
    /* top: 0; */
    font-size: 30px;
    text-shadow: 1.5px 1.5px 1.5px rgba(0,0,0,0.75);
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 1;
    transition: background-color ease-in-out 0.5s;
}

.overlay:hover {
    color: #fff;
    background-color: rgba(0,0,0,0.5);
    /* opacity: 0; */
    transition: background-color ease-in-out 0.5s;
}

.overlay:active, .overlay:focus {
    color: #fff;
}

.overlay-box {
    position: relative;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.2);
    /* z-index: 10; */
}

/* .title {
    position: absolute;
    z-index: 4;
    font-size: 30px;
    color: #fff;
} */

.reveal {
    /* width: 70%;
    height: 55%; */
    padding: 2.5rem;
    background-color: #FFE8B9;
    border: none;
}

@media print, screen and (min-width: 40em) {
    .reveal {
        width: 70%;
        height: 55%;
        /* padding: 2.5rem;
        background-color: #FFE8B9;
        border: none; */
    }
}

.reveal h1 {
    font-size: 24px;
    font-weight: bold;
    font-family: Calibri;
    line-height: 1em;
    text-transform: none;
    color: #3d3d3d;
}

/* .close-button {
    color: #fff;
} */

.action-link {
    position: absolute;
    /* width: 20%; */
    background-color: #fff;
    border: 2px #FFB89A solid;
    text-align: center;
    bottom: 2rem;
    transition: background-color, border ease-in-out 0.5s;
}

.action-link:hover {
    background-color: #FFB89A;
    border: 2px #fff solid;
    transition: background-color, border ease-in-out 0.5s;
}

.action-link:hover a {
    color: #fff;
}

.action-link a {
    display: inline-block;
    width: 100%;
    height: 100%;
    color: #FFB89A;
    padding: 0.8rem 3rem;
}

